Little alignment issue due to scrollbar in table is resolved

--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,24 @@ label + .MuiInput-formControl {
       font-size: 50%;
    }
 }
+
+::-webkit-scrollbar {
+   width: 0.35rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+   box-shadow: inset 0 0 5px white;
+   border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+   background: gray;
+   border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+   background: gray;
+}
